alignment fixes

--- a/src/Coin.css
+++ b/src/Coin.css
@@ -49,7 +49,10 @@
 }
 
 .coin-volume {
+  color: goldenrod;
+  text-align: left;
   width: 155px;
+  min-width: fit-content;
 }
 
 .coin-marketcap {
@@ -57,6 +60,7 @@
 }
 
 .coin-percent {
+  text-align: left;
   width: 100px;
 }
 
